2002-12-19  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* jhbuild.py: Move True/False definitions up - fixes undefined
	errors for Python version < 2.2.1

2002-12-19  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py: Commented out the metatheme module because the
	release team think it probably isn't useful anymore, and because its
	Desktop Theme capplet is confusingly similar to the new 2.2 Theme 
	capplet.

2002-12-17  James Henstridge  <james@daa.com.au>

	* jhbuild.py: define True and False if they aren't defined in
	__builtins__.  This gets it to work with slightly older Pythons
	(still need to decide whether to replace the other stuff using new
	features).

2002-12-16  James Henstridge  <james@daa.com.au>

	* cvs.py (CVSRoot._login): take a pointer to the buildscript, and
	use it to execute the cvs login command.

	* moduleinfo.py (gnome20.gnome-vfs-extras): add.
	(gnome22.gnome-media): require gstreamer.
	(gnome20.gnome-media): get gnome-2-0 branch.

	* jhbuild.py (do_dot): allow user to run "jhbuild dot" to print a
	dot file that can be processed with graphviz to produce a nice
	directed graph of what will be built.
	(do_list): "jhbuild list" outputs list of modules that would be
	built, in build order.

	* module.py (ModuleSet.write_dot): function to write out a dot
	file for use with graphviz.

	* moduleinfo.py (gnome22): add fontilus and sodipodi (although
	sodipodi doesn't seem to want to build yet ...)

2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* bootstrap.py (_normal): Use 'tput sgr0' instead of 'tput rmso'
	to fix bold uglyness, as already done in module.py.

2002-12-14  James Henstridge  <james@daa.com.au>

	* module.py (CVSModule.do_build): allow going to 'configure' state
	if build fails.

	* bootstrap.py (bootstraps): update libtool to 1.4.3.

	* moduleinfo.py (gnome22.glimmer): depend on libgnomeprint-2.0
	(gnome22.startup-notification): add libsnot.
	(gnome22.gnome-terminal): remove libzvt from list of deps.
