@@ -1,3 +1,11 @@
+2002-12-20  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* moduleinfo.py (gnome20): Add accessibility modules at-spi,
+	libgail-gnome, at-poke, gnome-mag, gok, gnome-speech, gnopernicus,
+	plus the MetaModule meta-gnome-accessibility.
+	(gnome22): Override modules at-spi, libgail-gnome, gnome-mag to
+	check out the HEAD branch.
+
 2002-12-19  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
 	* jhbuild.py: Move True/False definitions up - fixes undefined
 	errors for Python version < 2.2.1
